--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <div class="container">
-    <h3 id="headline">Every 20 minutes get up and walk around for 20 minutes while looking 20 feet ahead</h3>
+    <h3 id="headline">Every 20 minutes look at something 20 feet away for 20 seconds to reduce eye strain</h3>
     <div id="countdown">
       <ul>
         <li><span id="minutes">20</span>Minutes</li>
